# titan-sspr

./: .env.example  .gitignore  Dockerfile  compose.dev.yaml  compose.yaml  config.py  pyproject.toml  run.py
app/: __init__.py  extensions.py
app/blueprints/admin/: __init__.py  routes.py
app/blueprints/sspr/: __init__.py  forms.py  routes.py
app/models/: audit_log.py
app/services/: ad_service.py  audit_service.py  graph_service.py  otp_service.py  sms_service.py
app/templates/: base.html
app/templates/admin/: logs.html
app/templates/sspr/: index.html  reset.html  verify.html
nginx/: nginx.conf
tests/: conftest.py
tests/integration/: test_admin_routes.py  test_sspr_routes.py
tests/unit/: test_ad_service.py  test_audit_service.py  test_forms.py  test_graph_service.py  test_otp_service.py  test_sms_service.py
